# claude-hand-truck

./: .gitignore  CLAUDE.md  README.md  config.toml  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.steering/20260314-cleantrack-all-features/: design.md  requirements.md  tasklist.md
.steering/20260403-dual-camera-calibration-script/: design.md  requirements.md  tasklist.md
.steering/20260403-tui-calibration-script/: design.md  requirements.md  tasklist.md
config/: config.toml.sample
docs/: architecture.md  development-guidelines.md  functional-design.md  glossary.md  product-requirements.md  repository-structure.md
docs/ideas/: initial-requirements.md
scripts/: download_models.py  noneed-file.sh  setup_calibration.py  view_cameras.py
src/: app_config.py  main.py
src/control/: state.py  zmq_receiver.py
src/detection/: __init__.py  calibration_manager.py  hand_detector.py  priority_hand_detector_task.py
src/input/: __init__.py  camera_manager.py  sync_camera_reader.py
src/models/: __init__.py  calibration_config.py  cleaning_session.py  grid_cell.py  hand_position.py
src/output/: __init__.py  display_controller.py  heatmap_renderer.py
src/pipeline/: csv_writer_task.py  data_classes.py  pipeline.py  queue_monitor_task.py  tracking_task.py  zmq_sender_task.py
src/storage/: data_storage.py
src/tracking/: __init__.py  grid_tracker.py
tests/unit/detection/: test_calibration_manager.py
tests/unit/storage/: test_data_storage.py
tools/: animate_hand.py  sample_zmq_client.py  sample_zmq_control.py
(+1 files in other folders)
