[project]
name = "cleantrack"
version = "0.1.0"
description = "レストランテーブル清掃可視化システム"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.0,<5.0",
    "mediapipe>=0.10",
    "numpy>=2.0,<3.0",
    "matplotlib>=3.0,<4.0",
    "rich>=13.0",
    "zmq>=0.0.0",
    "pandas>=3.0.2",
]

[project.scripts]
cleantrack = "src.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
